# nostr-bot-ln-channel

./: README.md  __main__.py  channel.py  cln_plugin  cln_plugin.py  confi.py  config.py  eclair.py  ldk.py  lnd.py  lnd_bot.py  nost_bot.py  nostr.py  nostr_ln.py  nostr_ln_bot.py  pyproject.toml  requeriments.txt  requirements.txt  run.py  setup.py
doc/: run.md
github/workflow/: release.yml
