[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nostr-bot-ln-channel"
version = "1.0.8"
description = "A Nostr bot for Lightning Network channel automation"
authors = [
  { name = "AreaLayer", email = "your-email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["nostr", "lightning", "bot", "automation", "bitcoin"]

dependencies = [
  "nostr==0.0.2",
  "lnd-grpc==0.4.0",
  "nostr-dvm==1.1.3"
]

[project.urls]
"Homepage" = "https://github.com/AreaLayer/nostr-bot-ln-channel"
"Repository" = "https://github.com/AreaLayer/nostr-bot-ln-channel"

[tool.setuptools]
packages = ["nostr_bot_ln_channel"]  # Adjust if your actual module name is different

[tool.setuptools.package-data]
"nostr_bot_ln_channel" = ["*.env", "*.json"]
